# MSP432-Embedded-Rust-template

./: .gitignore  Cargo.toml  README.md  makefile
src/: main.rs
