[package]
name = "my_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
panic-halt = "0.2.0"
irq = "0.2.3"

[dependencies]
msp432p401r-hal = { version = "0.2.0", path = "msp432p401r-hal" }
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
msp432p401r-pac = {version = "0.3.0", features = ["rt"]}
cortex-m-semihosting = "0.5.0"
embedded-hal = "=1.0.0-alpha.6"
nb = "1.0.0"


[profile.dev]
debug = true
debug-assertions = true
opt-level = "s"

[profile.release]
opt-level = "s"
lto = true

#[features]
#rt = ["msp432p401r-pac/rt"]
